--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
-  <body>
+  <body class="<%='dev-back-ground' if Rails.env.development?%>">
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default">
       <div class="container">
