--- a/app/views/reports/average.html.erb
+++ b/app/views/reports/average.html.erb
@@ -1,10 +1,8 @@
 <%
 @page_title = "コイン価格履歴-移動平均"
 rate_of_up = TradeSetting.where(trade_type: :buy_rate_of_up).first.value
-if CurrencyAverage.any?
-  from = CurrencyAverage.minimum(:created_at) - TradeSetting.where(trade_type: :average_list_min).first.value.to_i.minute
-  to = CurrencyAverage.minimum(:created_at)
-end
+from = CurrencyHistory.minimum(:created_at)
+to = CurrencyHistory.maximum(:created_at)
 %>
 <p id="notice"><%= notice %></p>
 <h1><%=@page_title%></h1>
